--- a/index.html
+++ b/index.html
@@ -5,11 +5,175 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Leader board</title>
+    <script src="https://kit.fontawesome.com/56b927ea9d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Hello world</h1>
+
+
+    <main>
+        <section class="Container">
+            <h2 class="Section-title">Top player</h2>
+            <div class="Topplayer">
+
+                <div class="player">
+                    <img src="Photo/player-1.png" alt="">
+                    <h1 class="player-name">Top player -1</h1>
+                </div>
+                <div class="player">
+                    <img src="Photo/player-2.png" alt="">
+                    <h1 class="player-name">Top player -2</h1>
+                </div>
+                <div class="player">
+                    <img src="Photo/player-3.png" alt="">
+                    <h1 class="player-name"> Top player -3</h1>
+                </div>
+                <div class="player">
+                    <img src="Photo/player-4.png" alt="">
+                    <h1 class="player-name">Top player -4</h1>
+                </div>
+                <div class="player">
+                    <img src="Photo/player-5.png" alt="">
+                    <h1 class="player-name">Top player -5</h1>
+                </div>
+                <div class="player">
+                    <img src="Photo/player-6.png" alt="">
+                    <h1 class="player-name">Top player -6</h1>
+                </div>
+            </div>
+
+            <hr>
+            <div class="top-blogs">
+                <h1 class="Section-title">Top Blogs</h1>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="blog-thumbline">
+                            <img src="blog/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h1 class="blog-title">13 of My Favorite
+                                UI/UX Goodies</h1>
+                            <p class="blog-author">By <a href=""> Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbline">
+                            <img src="blog/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h1 class="blog-title">UI cheat sheet:
+                                list vs grids</h1>
+                            <p class="blog-author">By <a href="">Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbline">
+                            <img src="blog/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h1 class="blog-title">7 typography tips
+                                for interface design</h1>
+                            <p class="blog-author">By <a href=""> Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blog-thumbline">
+                            <img src="blog/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h1 class="blog-title">Your logo is
+                                copied</h1>
+                            <p class="blog-author">By <a href=""> Ferdinand Vogler</a></p>
+                        </div>
+                    </article>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- Lates Course -->
+        <section id="Section-gap" class="Container">
+
+            <h2 class="Section-title">Lates Course</h2>
+            <div class="Courses">
+                <div class="course">
+                    <div class="course-img"><img src="Course/course-1.png" alt=""></div>
+                    <div class="course-title">React - The Complete Guide 2020
+                        <br>
+                        <a href="">Reed Krakoff</a>
+                    </div>
+                    <div class="system">
+                        <div class="course-info">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star star"></i>
+
+                            <span>4.5</span>
+                        </div>
+                        <!-- <div class="course-rating">4.5</div> -->
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>01:30 hr
+                        </div>
+                    </div>
+
+                </div>
+                <div class="course">
+                    <div class="course-img"><img src="Course/course-2.png" alt=""></div>
+                    <div class="course-title">React - The Complete Guide 2020
+                        <br>
+                        <a href="">Reed Krakoff</a>
+                    </div>
+                    <div class="system">
+                        <div class="course-info">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star star"></i>
+
+                            <span>4.5</span>
+                        </div>
+                        <!-- <div class="course-rating">4.5</div> -->
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>01:30 hr
+                        </div>
+                    </div>
+
+                </div>
+                <div class="course">
+                    <div class="course-img"><img src="Course/course-3.png" alt=""></div>
+                    <div class="course-title">React - The Complete Guide 2020
+                        <br>
+                        <a href="">Reed Krakoff</a>
+                    </div>
+                    <div class="system">
+                        <div class="course-info">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star star"></i>
+
+                            <span>4.5</span>
+                        </div>
+                        <!-- <div class="course-rating">4.5</div> -->
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>01:30 hr
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
+
+    </main>
 </body>
 
 </html>
